tests/integration/structs/struct_field_private_error3.june
// error: 'new' used on private member field from outside struct or class

struct Stats {
    private age: i64

    fun print_age(self) {
        println(.age)
    }
}

fun main() {
    let stats = new Stats(age: 88)

    stats.print_age()
}